feat: Enhance carousel with swipe navigation, crossfade backdrops, and logo caching. - changed the color scheme

--- a/cinetrack-app/client/index.html
+++ b/cinetrack-app/client/index.html
@@ -7,22 +7,26 @@
   <title>Scene Stack Watchlist</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       theme: {
         extend: {
           fontFamily: {
-            'sans': ['Poppins', 'sans-serif'],
+            'sans': ['Outfit', 'sans-serif'],
+            'display': ['Bebas Neue', 'sans-serif'],
           },
           colors: {
-            'brand-bg': '#0D0C11',
-            'brand-surface': '#1F2937',
-            'brand-primary': '#4338CA', // indigo-700
-            'brand-secondary': '#4F46E5', // indigo-600
-            'brand-text-light': '#F9FAFB',
-            'brand-text-dim': '#9CA3AF',
+            'brand-bg': '#0A0A0B',
+            'brand-surface': '#161618',
+            'brand-surface-alt': '#1E1E21',
+            'brand-primary': '#D4A855',
+            'brand-secondary': '#E8C56B',
+            'brand-accent': '#F5E6C8',
+            'brand-text-light': '#F2F2F2',
+            'brand-text-dim': '#8A8A8E',
+            'brand-text-muted': '#5C5C60',
           }
         }
       }
