--- a/cinetrack-app/client/index.html
+++ b/cinetrack-app/client/index.html
@@ -51,7 +51,7 @@
 }
 </script>
 </head>
-
+<!--test commit-->
 <body class="bg-brand-bg">
   <div id="root"></div>
   <script type="module" src="src/index.tsx"></script>
